# Crypto-Tracker

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json  wrangler.toml
.github/workflows/: deploy.yml
db/: schema.sql
migrations/: 0001_init.sql  0002_seed.sql
public/: index.html
public/app/: index.html
public/app/assets/: crypto-tracker-ui-f5d06cc7b9192366.js  crypto-tracker-ui-f5d06cc7b9192366.js.br  crypto-tracker-ui_bg-b16e21b0dd253715.wasm  crypto-tracker-ui_bg-b16e21b0dd253715.wasm.br
src/: lib.rs  routes.rs
ui/: Cargo.toml
ui/assets/: credits.json
ui/src/: main.rs
ui/src/components/: credits.rs  mod.rs  phase_banner.rs
