[package]
name = "crypto-tracker"
version = "1.1.1"
edition = "2025"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
time = { version = "0.3", features = ["macros", "serde-human-readable"] }
cfg-if = "1"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[workspace]
members = ["ui"]
